# Delivery-App

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  settings.toml  test_service.py
adapters/cache/: redis.py
adapters/db/: models.py  session.py
adapters/db/repositories/: parcel.py
adapters/messaging/: celery.py  celery_app.py  tasks.py
alembic/: env.py
alembic/versions/: 294aae9445bc_create_parcel_and_parcel_type_tables.py  b4d5c0e1f9a2_add_initial_parcel_types_data.py
application/: parcel_service.py
core/: cache.py  celery.py  cookies.py  db.py  di.py  http.py  localization.py  logging.py  responses.py  settings.py  usd.py
docker/: app.Dockerfile
domain/: models.py  services.py
domain/commands/: tasks.py
domain/entities/: parcel.py
domain/ports/: messaging.py
domain/repositories/: interfaces.py
repositories/: __init__.py  interfaces.py  parcel.py
resources/: app.py  auth_middleware.py  dependencies.py  i18n.py  middlewares.py
resources/routers/: admin.py  admin_init.py  health.py  parcels.py  parcels_new.py  tasks.py  web.py
resources/web/: debug.html
schemas/: README.md  __init__.py  common.py  parcel.py  tasks.py
scripts/: force_create_tables.py  init_db.py  init_parcel_types.py  migrate.py  update_parcel_types.py  wait-for-db.py
services/: __init__.py  parcel_service.py  tasks.py  tasks_delivery.py
services/adapters/: messaging_celery.py
