[project]
name = "delivery-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "httpx>=0.27",
  "dynaconf>=3.2",
  "celery>=5.4",
  "loguru>=0.7"
]

[tool.ruff]
line-length = 100
target-version = "py312"

